<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" style="@style/AppTheme" android:padding="8dp" android:id="@+id/mainLayout">
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/uidInputLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/device_list"
            android:focusable="false" android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/id_input_title" android:layout_marginTop="16dp"
                android:maxLines="1"
                android:maxLength="20" android:inputType="textCapCharacters" android:id="@+id/rfid_input"
                android:digits="0123456789ABCDEF" android:focusable="true" android:focusableInTouchMode="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/valueInputLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/uidInputLayout"
            android:focusable="false" android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/value_input_title" android:layout_marginTop="16dp"
                android:id="@+id/value_input" android:inputType="numberDecimal" android:maxLines="1"
                android:maxLength="10" android:focusable="true"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/send_id_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_send_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/valueInputLayout"
            android:onClick="sendIdButtonClick" android:layout_marginStart="56dp"/>
    <ScrollView
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/indicator">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/logs_text_view"
            />
        </LinearLayout>
    </ScrollView>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/ic_indicator"
            android:id="@+id/indicator"
            app:layout_constraintEnd_toStartOf="@+id/id_send_button" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/valueInputLayout"
            app:layout_constraintHorizontal_bias="0.075"/>
    <Button
            android:text="@string/send_value_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_send_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/valueInputLayout"
            app:layout_constraintStart_toEndOf="@+id/id_send_button" android:layout_marginStart="8dp"
            android:onClick="sendValueButtonClick"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/device_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/deviceListTextView"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
    <TextView
            android:text="@string/device_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/deviceListTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/protocol_list"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            tools:layout_editor_absoluteX="0dp" android:id="@+id/protocol_list"
            app:layout_constraintTop_toBottomOf="@+id/textView" style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_marginTop="4dp"/>
    <TextView
            android:text="Протокол"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>